添加域名备案

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
     <img id="qgroup" src="./res/qgroup.png" alt="Q群二维码" width="135px" onclick="JoinQGroup()">
 
-    <div id="mobile-tips" style="margin: 20px; display: none;"> 拒绝移动设备访问 </div>
+    <div id="mobile-tips" style="margin: 20px; display: none; "> 拒绝移动设备访问 </div>
+
+    <div id="gz-icp">粤ICP备 2021035618号 </div>
 
     <script src="https://cdn-1251216093.file.myqcloud.com/paste/src/js/ace.js"></script>
     <script src="https://cdn-1251216093.file.myqcloud.com/paste/src/js/clipboard.min.js"></script>
